# pi-master-socket

./: Driver_pi.C  Driver_pi.h  Makefile  Makefile.in  MasterMain_pi.C  README.md  Task_pi.C  Task_pi.h  WorkerMain_pi.C  Worker_pi.C  Worker_pi.h  compile_and_run.sh  config.status  configure  configure.in  in_master.pvm  run.sh  submit_pvm  submit_socket
